--- a/page/tabBar/homePages/stayWageConfirm/stayWageConfirm.wxml
+++ b/page/tabBar/homePages/stayWageConfirm/stayWageConfirm.wxml
@@ -54,12 +54,12 @@
                 <text class='list_data'>{{item.deductionSalary}}</text>
               </view>
               <view class='list'>
-                <text class='list_title'>实发工资：</text>
+                <text class='list_title'>本月发放:</text>
                 <text class='list_data'>{{item.realSalary}}</text>
               </view>
               <view class='list'>
-                <text class='list_title'>本月发放：</text>
-                <text class='list_data'>{{item.realSalary}}</text>
+                <text class='list_title'>本月欠发：</text>
+                <text class='list_data'>{{item.differenceSalary}}</text>
               </view>   
           </view>
           <view data-id="{{item.id}}" bindtap='perDetails' 
