--- a/page/tabBar/minePages/bindBankCard/bindBankCard.wxml
+++ b/page/tabBar/minePages/bindBankCard/bindBankCard.wxml
@@ -4,7 +4,7 @@
   <view class='border_t_b bg_fff'>
     <view class='card_num'>
       <text class='num'>银行卡号</text>
-      <input bindinput='getUserIdCardNumber' data-types="0" class='card_input' placeholder='请输入银行卡号' value='{{bankData.bankCardNum}}'></input>
+      <input bindinput='getUserIdCardNumber' bindblur='get_carname' data-types="0" class='card_input' placeholder='请输入银行卡号' value='{{bankData.bankCardNum}}'></input>
       <!-- <text class='color_gray fa fa-camera'></text> -->
     </view>
   </view>
@@ -13,12 +13,20 @@
   <view class='border_t_b bg_fff'>
     <view class='card_num name_card'>
       <text class='com_titles'>姓名</text>
-      <input disabled='ture' data-types="1" bindinput='getInputVal' class='com_input' placeholder='请输入姓名' value='{{bankData.userName}}'></input>
+      <input disabled='ture' data-types="1" bindinput='getInputVal' class='com_input' placeholder='请输入姓名' value='{{userName}}'></input>
     </view>
-     <view class='card_num'>
+    <view class='card_num name_card'>
       <text class='com_titles'>开户行</text>
-      <input data-types="2" bindinput='getInputVal' class='com_input' placeholder='开户行' value='{{bankData.bankName}}'></input>
+      <input data-types="2" bindinput='getInputVal' class='com_input' placeholder='开户行' value='{{bankName}}'></input>
     </view>
+    <!-- <view class='card_num name_card'>
+      <text class='com_titles'>分行</text>
+      <input data-types="2" bindinput='getbranch' class='com_input' placeholder='分行' value='{{bankData.branch}}'></input>
+    </view>
+    <view class='card_num'>
+      <text class='com_titles'>支行</text>
+      <input data-types="2" bindinput='getbankNet' class='com_input' placeholder='支行' value='{{bankData.bankNet}}'></input>
+    </view> -->
   </view>
   <!-- 下一步 -->
   <view wx:if="{{!bankData.bankCardNum}}" bindtap='next' class='com_footer_btn bg_blue'>
