--- a/page/tabBar/homePages/stayworkDetails/stayworkDetails.wxml
+++ b/page/tabBar/homePages/stayworkDetails/stayworkDetails.wxml
@@ -15,16 +15,22 @@
     </view>
 
      <view class='list'>
-      <text>备注：</text>
+      <text>状态：</text>
       <text>{{details.status}}</text>
     </view>
   </view>
 
-  <view class='phone_title'>确认密码</view>
+  <!-- <view class='phone_title'>确认密码</view>
   <view class='code_box'>
     <input password bindinput='get_val' type='number' placeholder='请输入确认密码'></input>
-    <!-- <button bindtap='getCode' disabled='{{disabled}}' class='get_code'>{{time}}</button> -->
-  </view>
+  </view> -->
 
-  <view bindtap='confirmBtn' class='bg_blue com_width btn'>{{btnFont}}</view>
+  <template-toast
+    wx:if="{{!blockIsShow}}"
+    bind:fgetVal="fgetVal"
+    bind:fno_tap="fno_tap"
+    bind:fconfirmTap="confirmBtn">
+  </template-toast>
+
+  <view bindtap='confirmationTap' class='bg_blue com_width btn'>{{btnFont}}</view>
 </view>
