--- a/page/tabBar/message/message.wxml
+++ b/page/tabBar/message/message.wxml
@@ -18,13 +18,18 @@
       wx:for="{{ggData.t}}" wx:item="item" wx:key=""
       data-id="{{item.id}}" data-types="{{item.type}}">
       <view class='com_width'>
-          <view class='notice_list_title'>{{item.title}}</view>
+          <view class='notice_list_title'>【{{item.type}}】{{item.title}}</view>
           <view class='display_flex notice_list_con color_gray'>
-            <view class='display_flex'>
-              <text class='fa fa-user'></text>
-              <text>来源：{{item.sourceName}}</text>
-              <text class='fa fa-time time_icon'></text>
-              <text>时间：{{item.createTime}}</text>
+            <view class='display_flex' style='width:100%'>
+              <view class='display_flex com_view_width'>
+                <text class='fa fa-user'></text>
+                <text class='overflow'>来源：{{item.sourceName}}</text>
+              </view>
+              <view class='display_flex com_view_width'>
+                <text class='fa fa-time time_icon'></text>
+                <text>时间：{{item.createTime}}</text>
+              </view>
+              
             </view>
             <!-- <view wx:if="{{item.isRead == '2'}}" class='add_or'>未读</view>
             <view wx:else class='add_gr'>已读</view> -->
