--- a/page/tabBar/minePages/bindBankCard/bindBankCard.wxss
+++ b/page/tabBar/minePages/bindBankCard/bindBankCard.wxss
@@ -1,3 +1,20 @@
+.ocr-wrapper {
+  /* margin: 40rpx auto; */
+  width: 375rpx;
+  background: #e5e5e5;
+}
+.intro {
+  /* margin: 40rpx; */
+  background: #e5e5e5;
+}
+button{
+  line-height: 60rpx;
+  border: none;
+  background: #fff;
+  font-size: 30rpx;
+}
+
+
 .header{
   padding: 25rpx 0;
   text-align: center;
